<resources>
    <string name="app_name">Yanai</string>
    <string name="title_home">Home</string>
    <string name="title_library">My Library</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>
    <string name="download">Download</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_go_to_signup">Create an account</string>
    <string name="lorem_ipsum">
        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
        The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using Content here, content here
        , making it look like readable English.
        Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for
    </string>
    <string name="short_lorem">
        The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using Content here, content here
        , making it look like readable English.
    </string>
    <string name="facebook_app_id">360562669055143</string>
    <string name="fb_login_protocol_scheme">fb360562669055143</string>
</resources>
